# mojai

./: .gitignore  README.md  mise.toml  pyproject.toml
scripts/: download_models.py
src/: __init__.py  config.py
src/generate/: __init__.py  diffuser.py  font_builder.py  pipeline.py
src/load/: __init__.py  ocr.py  pipeline.py  segmentation.py
src/ocr/: __init__.py  __main__.py  adjuster.py  preprocessor.py  report.py  segmenter.py  verifier.py
src/verify/: __init__.py  app.py  image_display.py  widgets.py
tests/: __init__.py  test_config.py  test_segmentation.py
