[project]
name = "mojai"
version = "0.1.0"
description = "手書き文書デジタル化・復元プラットフォーム - CUIベースの高速検証フローと拡散モデルによるワンショットフォント生成"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "mojai-dev" }]
keywords = ["ocr", "handwriting", "font-generation", "diffusion-models", "paddleocr"]

dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "manga-ocr>=0.1.11",
    "textual>=0.40.0",
    "rich>=13.0.0",
    "term-image>=0.7.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.24.0",
    "transformers<=4.49.0",
    "accelerate>=0.24.0",
    "fonttools>=4.45.0",
    "ufoLib2>=0.16.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tqdm>=4.66.0",
    "pytest>=9.0.2",
    "opencv-python-headless>=4.11.0.86",
    "bitsandbytes>=0.49.0",
    "sentencepiece>=0.2.1",
    "einops>=0.8.1",
    "timm>=1.0.22",
    "segment-anything-py>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "scikit-image>=0.26.0",
    "ftfy>=6.3.1",
    "regex>=2025.11.3",
    "open-clip-torch>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
mojai-ocr = "src.load.pipeline:main"
mojai-verify = "src.verify.app:main"
mojai-generate = "src.generate.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
